--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('../src/assets/fondo-pantalla-abstracto-nebulosa-ultra-detallado-4_1562-749.avif')
+    background: url('../src/assets/fondo-pantalla-abstracto-nebulosa-ultra-detallado-4_1562-749.webp')
     no-repeat;
     background-size: cover;
     background-position: center;
