--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -2,6 +2,7 @@
     width: 420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
+    -webkit-backdrop-filter: blur(30px);
     backdrop-filter: blur(30px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: #fff;
